--- a/templates/Home/index.html
+++ b/templates/Home/index.html
@@ -5,8 +5,8 @@
 {% block title %}Home{% endblock %}
 
 {% block library %}
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <!--<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">-->
+    <!--<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">-->
 {% endblock %}
 
 {% block navbar %}
@@ -66,13 +66,13 @@
   </div>
 </form>
 
-   <script> {# Notification Account or pass false#}
-    var error ='{{ error }}';
-        if(error!=''){
-            if (confirm("{{ error }}\nVui lòng đăng nhập lại !")) {
-                $("#formsignin").modal();
-            }
-        }
-    </script>
+   <!--<script> {# Notification Account or pass false#}-->
+    <!--var error ='{{ error }}';-->
+        <!--if(error!=''){-->
+            <!--if (confirm("{{ error }}\nVui lòng đăng nhập lại !")) {-->
+                <!--$("#formsignin").modal();-->
+            <!--}-->
+        <!--}-->
+    <!--</script>-->
 
 {% endblock %}
